--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,31 +1,38 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  --background_colour: rgba(11, 11, 11);
+  --text_colour: rgb(255, 250, 240); /* floralwhite  */
+  --border_colour: rgba(204, 204, 204, 0.2);
+  --button_colour: rgb(120, 34, 46);
+  --button_colour_hover: rgb(120, 34, 46);
+
+  font-family: 'Space Grotesk', system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* color: rgba(255, 255, 255, 0.87); */
+  color: var(--text_colour);
+  background-color: var(--background_colour);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box !important;
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: var(--button_colour);
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: var(--button_colour_hover);
+  opacity: 0.8;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -42,12 +49,15 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
+  color: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
-  border-color: #646cff;
+button:hover,
+button:focus {
+  color: inherit;
+  border-color: var(--button_colour_hover);
 }
 button:focus,
 button:focus-visible {
