--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -20,7 +20,21 @@
   -moz-osx-font-smoothing: grayscale;
   box-sizing: border-box !important;
 }
+html {
+  margin: 0;
+  padding: 0;
 
+  width: 100%;
+  height: 100vh;
+
+  background: #333;
+  background-image: linear-gradient(
+      rgba(22, 22, 22, 0.7) 0.1em,
+      transparent 0.1em
+    ),
+    linear-gradient(90deg, rgba(22, 22, 22, 0.7) 0.1em, transparent 0.1em);
+  background-size: 3em 3em;
+}
 a {
   font-weight: 500;
   color: var(--button_colour);
@@ -35,6 +49,7 @@ body {
   margin: 0;
   min-width: 320px;
   min-height: 100vh;
+  position: relative;
 }
 
 h1 {
